@@ -40,7 +40,9 @@ module ChunkyPNG
     # @see ChunkyPNG::Image::METADATA_COMPRESSION_TRESHOLD
     def metadata_chunks
       metadata.map do |key, value|
-        if value.length >= METADATA_COMPRESSION_TRESHOLD
+        if value.kind_of?(ChunkyPNG::Chunk::Base) # Add it directly - programmer _probably_ knows what he's doing...
+          value
+        elsif value.length >= METADATA_COMPRESSION_TRESHOLD
           ChunkyPNG::Chunk::CompressedText.new(key, value)
         else
           ChunkyPNG::Chunk::Text.new(key, value)
