@@ -8,6 +8,7 @@ The file documents the changes to this library over the different versions.
 === Unreleased changes
 
 - Implemented <tt>ChunkyPNG::Dimension#hash</tt> to fix some specs after a behavior change in RSpec.
+- Better support for iTXt chunks that can be read/written as metadata
 
 === 1.3.11 - 2018-11-21
 
